# GameEngine

./: CMakeLists.txt  camera.c  camera.h  draw.c  draw.h  framebuffer.c  framebuffer.h  geometry.c  geometry.h  gui.c  gui.h  main.c  shader.c  shader.h  simplex_noise.c  simplex_noise.h  test.c  test.h  texture.c  texture.h  types.h  utils.c  utils.h  world.c  world.h
res/: button.pdn
shader/: gui.vert  shader.frag  shader.geom  shader.vert  shadow.frag  shadow.vert  simpleTexture.frag  simpleTexture.vert  wireframe.frag  wireframe.geom  wireframe.vert
